YAML-STANTARD/12.pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: k8s-exam
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
